login page added

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,8 @@
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
         crossorigin="anonymous"/>
   <style>
-    body {
+
+    .body {
       background-image: url('https://as1.ftcdn.net/v2/jpg/03/68/56/78/1000_F_368567834_T3otD8zZNqVemY17eewXbW5M8oD3KQHe.jpg');
       background-size: cover;
       background-repeat: no-repeat;
