blog-list added

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -6,7 +6,7 @@
 <div class="sidebar" th:fragment="sidebar">
     <div class="sidebar-sticky">
         <!-- Add more links as needed -->
-        <button class="btn">Blogs</button>
+        <a class="btn" th:href="@{/show-blog-list}">Blogs</a>
         <button class="btn">Podcasts</button>
         <button class="btn">Videos</button>
         <button class="btn">Therapists</button>
