--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,24 @@
   <div class="container">
     <div class="pt-3">
       <h1>Welcome to Mental Health Support Network</h1>
-      <p>This is the main content area of your homepage.</p>
+      <p class="text-justify">This is a website to help individuals facing mental health challenges. The aim is to make it easy for people to find support and resources.
+        We know that mental health is important, and sometimes it is hard to get the help we need.
+        This website aims to change that. This initiative focuses on create a safe space for individuals seeking emotional well-being,
+        focusing on simplicity, accessibility, and future advancements in mental health care.
+        Many people around the world struggle with mental health, but getting help can be tough because of the lack of services,
+        shyness, or monetary issues. This website was built to break down these barriers.
+        It will provide information, tools, and connections to support people in managing their mental health and well-being.
+        By using a friendly online community, certainly it will reduce the feeling of being alone
+        and the grief that often comes with mental health struggles.
+        This website is a safe space for people to share their experiences and find the support they need.
+        The main goal of this web-based project is to provide a user-friendly platform for individuals to connect with mental health resources.
+        Users can easily navigate the website, accessing a variety of support, materials and insights.
+        The platform draws on a wealth of knowledge to empower users to find resources that align with their needs and personal growth objectives.
+        This website is like a friend that understands and helps you navigate through tough times.
+        It will have features like virtual support groups, and self-help tools. Virtual support groups and therapists to connect
+        with others going through similar experiences.
+        Therapist directories help users find professionals who can provide treatment and support.
+        Self-help tools empower users to take control of their mental health with things like articles, blogs, podcasts, and videos.</p>
       <!-- Add your main content here -->
     </div>
   </div>
