blog, podcast, group discussion view done

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -7,10 +7,10 @@
     <div class="sidebar-sticky">
         <!-- Add more links as needed -->
         <a class="btn" th:href="@{/show-blog-list}">Blogs</a>
-        <button class="btn">Podcasts</button>
+        <a class="btn" th:href="@{/show-podcast-list}">Podcasts</a>
         <button class="btn">Videos</button>
         <button class="btn">Therapists</button>
-        <button class="btn">Group Discussions</button>
+        <a class="btn" th:href="@{/show-discussion-list}">Group Discussions</a>
         <!-- Add more buttons as needed -->
     </div>
 </div>
