--- a/src/main/resources/templates/videos/video-list.html
+++ b/src/main/resources/templates/videos/video-list.html
@@ -8,6 +8,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <link href="/css/blog-list.css" rel="stylesheet">
 </head>
 <body>
 
@@ -23,7 +24,7 @@
     <div class="container">
         <div class="pt-3">
             <h1>Blogs</h1>
-            <a class="btn btn-success mb-3" th:href="@{/show-add-blog-page}">Add New Blog</a>
+            <a class="btn btn-success mb-3" th:href="@{/show-add-blow-page}">Add New Blog</a>
             <!-- Search field -->
             <div class="input-group mb-3" style="width: 600px;">
                 <input aria-describedby="basic-addon2" aria-label="Search Blogs" class="form-control" placeholder="Search Blogs" type="text">
