--- a/src/main/resources/templates/discussions/add-discussion.html
+++ b/src/main/resources/templates/discussions/add-discussion.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add Blog-MHSN</title>
+    <title>Ask Anything-MHSN</title>
 
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -22,26 +22,27 @@
 <main class="main-content" role="main">
     <div class="container">
         <div class="pt-3">
-            <h1>Create Blog</h1>
+            <h1>Ask Anything</h1>
             <form>
                 <div class="form-group">
-                    <label for="blogTitle">Blog Title</label>
-                    <input class="form-control" id="blogTitle" placeholder="Enter Blog Title" type="text">
+                    <label for="discussionTopic">Query Topic:</label>
+                    <input class="form-control" id="discussionTopic" type="text">
                 </div>
                 <div class="form-group">
-                    <label for="blogTopic">Topic</label>
-                    <input class="form-control" id="blogTopic" placeholder="Enter Topic of This Blog" type="text">
+                    <label for="discussionQuery">Write Your Query Here:</label>
+                    <textarea class="form-control" id="discussionQuery" rows="3"></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="blogAuthor">Author</label>
-                    <input class="form-control" id="blogAuthor" placeholder="Enter Author Name" type="text">
-                </div>
-                <div class="form-group">
-                    <label for="blogDescription">Blog Description</label>
-                    <textarea class="form-control" id="blogDescription" placeholder="Enter Blog Description" rows="5"></textarea>
+                    <label for="gender">Gender:</label>
+                    <select class="form-control" id="gender">
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                        <option value="other">Other</option>
+                    </select>
                 </div>
                 <button class="btn btn-primary" type="submit">Submit</button>
             </form>
+            <a class="mt-3" th:href="@{/show-discussion-list}">Back to Discussions</a>
         </div>
     </div>
 </main>
