--- a/src/main/resources/templates/videos/add-video.html
+++ b/src/main/resources/templates/videos/add-video.html
@@ -8,6 +8,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <link href="/css/blog-list.css" rel="stylesheet">
 </head>
 <body>
 
