--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -8,8 +8,8 @@
         <!-- Add more links as needed -->
         <a class="btn" th:href="@{/show-blog-list}">Blogs</a>
         <a class="btn" th:href="@{/show-podcast-list}">Podcasts</a>
-        <button class="btn">Videos</button>
-        <button class="btn">Therapists</button>
+        <a class="btn" th:href="@{/show-video-list}">Videos</a>
+        <a class="btn" th:href="@{/show-therapist-list}">Therapists</a>
         <a class="btn" th:href="@{/show-discussion-list}">Group Discussions</a>
         <!-- Add more buttons as needed -->
     </div>
