--- a/src/main/resources/templates/videos/video-list.html
+++ b/src/main/resources/templates/videos/video-list.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Blogs-MHSN</title>
+    <title>Videos-MHSN</title>
 
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -18,72 +18,68 @@
 
 <!-- Sidebar -->
 <div th:replace="fragments/sidebar :: sidebar"></div>
-
 <!-- Main content area -->
 <main class="main-content" role="main">
     <div class="container">
         <div class="pt-3">
-            <h1>Blogs</h1>
-            <a class="btn btn-success mb-3" th:href="@{/show-add-blow-page}">Add New Blog</a>
+            <h1>Videos</h1>
+            <a class="btn btn-success mb-3" th:href="@{/show-add-video-page}">Add New Video</a>
             <!-- Search field -->
             <div class="input-group mb-3" style="width: 600px;">
-                <input aria-describedby="basic-addon2" aria-label="Search Blogs" class="form-control" placeholder="Search Blogs" type="text">
+                <input aria-describedby="basic-addon2" aria-label="Search Videos" class="form-control" placeholder="Search Videos" type="text">
                 <div class="input-group-append">
                     <button class="btn btn-primary" type="button">Search</button>
                 </div>
             </div>
             <div class="table-responsive">
                 <table class="table table-bordered">
-                <thead>
-                <tr>
-                    <th class="text-center">Blog Title</th>
-                    <th class="text-center">Topic</th>
-                    <th class="text-center">Author</th>
-                    <th class="text-center">Short Description</th>
-                    <th class="text-center">Publish Date</th>
-                    <th class="text-center">Action</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td class="text-center">Dummy Title 1</td>
-                    <td class="text-center">Topic 1</td>
-                    <td class="text-center">Author 1</td>
-                    <td class="text-center">Description 1</td>
-                    <td class="text-center">2024-01-01</td>
-                    <td class="text-center">
-                        <a class="btn btn-info" th:href="@{/show-blog-details}">Read</a>
-                        <a class="btn btn-warning" href="#">Update</a>
-                        <a class="btn btn-danger" href="#">Delete</a>
-                    </td>
-                </tr>
-                <!-- Add more rows with dummy data -->
-                <tr>
-                    <td class="text-center">Dummy Title 2</td>
-                    <td class="text-center">Topic 2</td>
-                    <td class="text-center">Author 2</td>
-                    <td class="text-center">Description 2</td>
-                    <td class="text-center">2024-01-02</td>
-                    <td class="text-center">
-                        <a class="btn btn-info" th:href="@{/show-blog-details}">Read</a>
-                        <a class="btn btn-warning" href="#">Update</a>
-                        <a class="btn btn-danger" href="#">Delete</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="text-center">Dummy Title 3</td>
-                    <td class="text-center">Topic 3</td>
-                    <td class="text-center">Author 3</td>
-                    <td class="text-center">Description 3</td>
-                    <td class="text-center">2024-01-03</td>
-                    <td class="text-center">
-                        <a class="btn btn-info" th:href="@{/show-blog-details}">Read</a>
-                        <a class="btn btn-warning" href="#">Update</a>
-                        <a class="btn btn-danger" href="#">Delete</a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+                    <thead>
+                    <tr>
+                        <th class="text-center">Video Topic</th>
+                        <th class="text-center">Producer Name</th>
+                        <th class="text-center">Uploaded At</th>
+                        <th class="text-center">Duration (in minutes)</th>
+                        <th class="text-center">Video</th>
+                        <th class="text-center">Action</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td class="text-center">Video Topic 1</td>
+                        <td class="text-center">Producer 1</td>
+                        <td class="text-center">2024-01-01</td>
+                        <td class="text-center">30</td>
+                        <td class="text-center">Video 1</td>
+                        <td class="text-center">
+                            <button class="btn btn-primary"><i class="fas fa-play"></i> Play</button>
+                            <a class="btn btn-danger" href="#">Delete</a>
+                        </td>
+                    </tr>
+                    <!-- Add more rows with dummy data -->
+                    <tr>
+                        <td class="text-center">Video Topic 2</td>
+                        <td class="text-center">Producer 2</td>
+                        <td class="text-center">2024-01-02</td>
+                        <td class="text-center">45</td>
+                        <td class="text-center">Video 2</td>
+                        <td class="text-center">
+                            <button class="btn btn-primary"><i class="fas fa-play"></i> Play</button>
+                            <a class="btn btn-danger" href="#">Delete</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">Video Topic 3</td>
+                        <td class="text-center">Producer 3</td>
+                        <td class="text-center">2024-01-03</td>
+                        <td class="text-center">60</td>
+                        <td class="text-center">Video 3</td>
+                        <td class="text-center">
+                            <button class="btn btn-primary"><i class="fas fa-play"></i> Play</button>
+                            <a class="btn btn-danger" href="#">Delete</a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
             <a class="mt-3" th:href="@{/}">Back to Home</a>
         </div>
