--- a/src/main/resources/templates/blogs/add-blog.html
+++ b/src/main/resources/templates/blogs/add-blog.html
@@ -23,22 +23,22 @@
     <div class="container">
         <div class="pt-3">
             <h1>Create Blog</h1>
-            <form>
+            <form th:action="@{/blog-save}" method="POST">
                 <div class="form-group">
-                    <label for="blogTitle">Blog Title</label>
-                    <input class="form-control" id="blogTitle" placeholder="Enter Blog Title" type="text">
+                    <label for="title">Blog Title</label>
+                    <input class="form-control" id="title" name="title" placeholder="Enter Blog Title" type="text">
                 </div>
                 <div class="form-group">
-                    <label for="blogTopic">Topic</label>
-                    <input class="form-control" id="blogTopic" placeholder="Enter Topic of This Blog" type="text">
+                    <label for="topic">Topic</label>
+                    <input class="form-control" id="topic" name="topic" placeholder="Enter Topic of This Blog" type="text">
                 </div>
                 <div class="form-group">
-                    <label for="blogAuthor">Author</label>
-                    <input class="form-control" id="blogAuthor" placeholder="Enter Author Name" type="text">
+                    <label for="author">Author</label>
+                    <input class="form-control" id="author" name="author" placeholder="Enter Author Name" type="text">
                 </div>
                 <div class="form-group">
-                    <label for="blogDescription">Blog Description</label>
-                    <textarea class="form-control" id="blogDescription" placeholder="Enter Blog Description" rows="5"></textarea>
+                    <label for="description">Blog Description</label>
+                    <textarea class="form-control" id="description" name="description" placeholder="Enter Blog Description" rows="5"></textarea>
                 </div>
                 <button class="btn btn-primary" type="submit">Submit</button>
             </form>
