--- a/src/main/resources/templates/blogs/blog-details.html
+++ b/src/main/resources/templates/blogs/blog-details.html
@@ -22,25 +22,18 @@
 <main class="main-content" role="main">
     <div class="container">
         <div class="pt-3">
-            <h1>Blog Detail</h1>
+            <h2 class="card-title" th:text="${blog.title}"></h2>
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title">Dummy Title 1</h4>
-                    <p class="card-text"><b>Topic: </b> Topic 1</p>
-                    <p class="card-text"><b>Author: </b> Author 1</p>
+                    <h4 class="card-text">Topic: <span th:text="${blog.topic}"></span></h4>
+                    <h6 class="card-text">Author: <span th:text="${blog.author}"></span> </h6>
                     <hr>
-                    <p class="card-text text-justify"> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                        It has survived not only five centuries, but also the leap into electronic typesetting,
-                        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
-                        sheets containing Lorem Ipsum passages,
-                        and more recently with desktop publishing software like Aldus PageMaker including versions of
-                        Lorem Ipsum.</p>
-                    <p class="card-text">Publish Date: 2024-01-01</p>
+                    <p class="card-text text-justify" th:text="${blog.description}"></p>
+
+                    <h6 class="card-text">Published Date: <span th:text="${blog.publishedDate}"></span> </h6>
                 </div>
             </div>
-            <a class="mt-3" href="/blogs">Back to Blogs</a>
+            <a class="mt-3" th:href=@{/show-blog-list}>Back to Blogs</a>
         </div>
     </div>
 </main>
