--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -55,15 +55,13 @@
           <label for="mobileNo">Mobile Number</label>
           <input class="form-control" id="mobileNo" placeholder="Enter your mobile number" required type="text">
         </div>
-        <!-- Gender & Address -->
-        <!-- Gender -->
         <div class="form-group">
           <label for="gender">Gender</label>
           <select class="form-control" id="gender" required>
             <option disabled selected>Select your gender</option>
-            <option value="male">Male</option>
-            <option value="female">Female</option>
-            <option value="other">Other</option>
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
+            <option value="Other">Other</option>
           </select>
         </div>
         <!-- Address -->
