registration.html refactored

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
-  <script src="js/registration.js"></script>
+<!--  <script src="js/registration.js"></script>-->
 </head>
 <body>
 
@@ -80,12 +80,12 @@
           <label for="confirmPassword">Confirm Password</label>
           <input class="form-control" id="confirmPassword" placeholder="Confirm your password" required type="password">
         </div>
-        <!-- Certificates Field (Hidden by default) -->
-        <div class="form-group" id="certificatesField" style="display:none;">
-          <label for="certificates">Certificates</label>
-          <input class="form-control-file" id="certificates" multiple type="file">
-          <small class="form-text text-muted" id="certificatesHelp">Upload multiple certificate files.</small>
-        </div>
+<!--        &lt;!&ndash; Certificates Field (Hidden by default) &ndash;&gt;-->
+<!--        <div class="form-group" id="certificatesField" style="display:none;">-->
+<!--          <label for="certificates">Certificates</label>-->
+<!--          <input class="form-control-file" id="certificates" multiple type="file">-->
+<!--          <small class="form-text text-muted" id="certificatesHelp">Upload multiple certificate files.</small>-->
+<!--        </div>-->
         <button type="submit" class="btn btn-primary">Register</button>
       </form>
     </div>
