--- a/src/main/resources/templates/therapists/add-therapist.html
+++ b/src/main/resources/templates/therapists/add-therapist.html
@@ -83,10 +83,10 @@
                     <input class="form-control" id="confirmPassword" placeholder="Confirm therapist's password" required type="password">
                 </div>
                 <!-- Certificates Field (Hidden by default) -->
-                <div class="form-group" id="certificatesField" style="display:none;">
-                    <label for="certificates">Certificates</label>
-                    <input class="form-control-file" id="certificates" multiple type="file">
-                    <small class="form-text text-muted" id="certificatesHelp">Upload multiple certificate files.</small>
+                <div class="form-group" id="certificateField" style="display:none;">
+                    <label for="certificate">Certificates</label>
+                    <input class="form-control-file" id="certificate" type="file">
+                    <small class="form-text text-muted" id="certificateHelp">Upload all scanned certificate in one file.</small>
                 </div>
                 <button class="btn btn-primary" type="submit">Add Therapist</button>
             </form>
