--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -9,7 +9,7 @@
         flex-direction: column;
     }
     .navbar {
-        background-color: #2ecc71; /* Sweet green color for navbar */
+        background-color: #02fab8; /* color for navbar */
         margin-bottom: 20px;
     }
     .navbar-brand,
